--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,8 +2,8 @@ server.port=10000
 
 #Oracle DataSource
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://eura-maria-db.cmjphsu1czot.ap-northeast-2.rds.amazonaws.com:3306/eura_db
+spring.datasource.url=jdbc:mariadb://localhost:3306/eura_db
 spring.datasource.username=eura_user
 spring.datasource.password=eura_pass
 
-file.upload-dir=c:\\files
+file.upload-dir=/Users/winmaster/DEV/upload
