--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,4 +6,5 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/eura_db
 spring.datasource.username=eura_user
 spring.datasource.password=eura_pass
 
-file.upload-dir=/Users/winmaster/DEV/upload
+#업로드 디렉토리는 협의 후 확정
+file.upload-dir=/Users/winmaster/DEV/EURA/upload
