--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -6,4 +6,5 @@ spring.datasource.url=jdbc:mariadb://eura-maria-db.cmjphsu1czot.ap-northeast-2.r
 spring.datasource.username=eura_user
 spring.datasource.password=eura_pass
 
+#업로드 디렉토리는 협의 후 확정
 file.upload-dir=/Users/abeki/workspace/FACT/file_store
