--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,3 +8,6 @@ spring.datasource.password=eura_pass
 
 #업로드 디렉토리는 협의 후 확정
 file.upload-dir=/Users/winmaster/DEV/EURA/upload
+
+#개발만 디버그 로그 보이게 하기
+logging.level.root: debug
