--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=200MB
 # Max Request Size
 spring.servlet.multipart.max-request-size=215MB
+
+spring.jwt.secret=ToiRTMXMHjwLXqkcbzmMWTxzIPhy4JA82M3q
