--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -8,3 +8,4 @@ spring.datasource.password=eura_pass
 
 #업로드 디렉토리는 협의 후 확정
 file.upload-dir=/Users/abeki/workspace/FACT/file_store
+mail.passwd = mailpass
