--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <name>EURA</name>
     <properties>
         <java.version>1.8</java.version>
-        <log4j2.version>2.15.0</log4j2.version>
+        <log4j2.version>2.19.0</log4j2.version>
     </properties>
     <url>https://www.egovframe.go.kr</url>
 
@@ -146,6 +146,22 @@
             <artifactId>commons-io</artifactId>
             <version>2.11.0</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-reload4j -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-reload4j</artifactId>
+            <version>2.0.3</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/dev.akkinoc.util/yaml-resource-bundle -->
+        <dependency>
+            <groupId>dev.akkinoc.util</groupId>
+            <artifactId>yaml-resource-bundle</artifactId>
+            <version>2.7.1</version>
+        </dependency>
+
     </dependencies>
     <build>
         <directory>${basedir}/target</directory>
