--- a/pom.xml
+++ b/pom.xml
@@ -161,7 +161,12 @@
             <artifactId>yaml-resource-bundle</artifactId>
             <version>2.7.1</version>
         </dependency>
-
+    
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.9.0</version>
+        </dependency>
     </dependencies>
     <build>
         <directory>${basedir}/target</directory>
