--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -11,6 +11,6 @@ spring:
 
 #업로드 디렉토리는 협의 후 확정
 file:
-  upload-dir: /Users/abeki/workspace/FACT/file_store
+  upload-dir: /upload/
 mail:
   passwd: mailpass
