--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -5,13 +5,12 @@ server:
 spring:
   datasource:
     driverClassName: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://eura-maria-db.cmjphsu1czot.ap-northeast-2.rds.amazonaws.com:3306/eura_db
+    url: jdbc:mariadb://euradb.cxmubqzajvkd.ap-northeast-2.rds.amazonaws.com:3306/eura_db
     username: eura_user
-    password: eura_pass
+    password: db!#221104fk&$%^
 
 #업로드 디렉토리는 협의 후 확정
 file:
   upload-dir: /upload/
-#  upload-dir: /Users/apple/Desktop/EURAfiles
 mail:
   passwd: mailpass
