--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -11,7 +11,7 @@ spring:
 
 #업로드 디렉토리는 협의 후 확정
 file:
-  upload-dir: /upload/
-#  upload-dir: /Users/apple/Desktop/EURAfiles
+#  upload-dir: /upload/
+  upload-dir: /Users/apple/Desktop/EURAfiles
 mail:
   passwd: mailpass
