--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -5,12 +5,13 @@ server:
 spring:
   datasource:
     driverClassName: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://euradb.cxmubqzajvkd.ap-northeast-2.rds.amazonaws.com:3306/eura_db
+    url: jdbc:mariadb://eura-maria-db.cmjphsu1czot.ap-northeast-2.rds.amazonaws.com:3306/eura_db
     username: eura_user
-    password: db!#221104fk&$%^
+    # db!#221104fk&$%^
+    password: eura_pass
 
 #업로드 디렉토리는 협의 후 확정
 file:
-  upload-dir: /upload/
+  upload-dir: /opt/server/upload/
 mail:
   passwd: mailpass
