--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -35,6 +35,7 @@ log4jdbc:
         drivers: false
 
 mail:
-  passwd: ""
+  passwd: "foicfoic22!"
 
 domain: http://192.168.0.7:10000
+w3domain: http://localhost:3000
