CORS 테스트 삭제, 중복 로그인 체크 삭제

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -22,6 +22,7 @@ logging:
   file:
     path: /Users/winmaster/APPS/apache-tomcat-9/logs
     max-history: 7
+  register-shutdown-hook: true
 
 log4jdbc:
   spylogdelegator:
