--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,13 @@
             <artifactId>gson</artifactId>
             <version>2.10</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
     </dependencies>
     <build>
         <directory>${basedir}/target</directory>
