야간 작업 커밋 동기화

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -37,5 +37,5 @@ log4jdbc:
 mail:
   passwd: "foicfoic22!"
 
-domain: http://api.eura.site
-w3domain: http://eura.site
+domain: https://api.eura.site
+w3domain: https://eura.site
