--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ web.iml
 application.yml
 application-dev.yml
 application-prod.yml
+/src/main/resources/application.yml
+/src/main/resources/application-dev.yml
+/src/main/resources/application-prod.yml
