파일 업로드 AWS로 변경
- 프로필 사진 변경, 등록 AWS 로 변경
- 미팅룸 첨부파일 AWS로 변경

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -35,4 +35,5 @@ mail:
 
 domain: https://api.eura.site
 w3domain: https://eura.site
-filedomain: https://file.eura.site
+filedomain: https://file.eura.site/upload
+voddomain: https://vod.eura.site
