파일연결 부분 개발/운영 분리

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -37,3 +37,4 @@ domain: https://api.eura.site
 w3domain: https://eura.site
 filedomain: https://file.eura.site/upload
 voddomain: https://vod.eura.site
+srvinfo: "prod"
