--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -8,6 +8,9 @@ spring:
     url: jdbc:mariadb://eura-maria-db.cmjphsu1czot.ap-northeast-2.rds.amazonaws.com:3306/eura_db
     username: eura_user
     password: eura_pass
+    # url: jdbc:mariadb://eura-db.cxmubqzajvkd.ap-northeast-2.rds.amazonaws.com:3306/eura_db
+    # username: euradb
+    # password: db!#221104fk&$%^
 
 #업로드 디렉토리는 협의 후 확정
 file:
@@ -38,5 +41,8 @@ log4jdbc:
 mail:
   passwd: "foicfoic22!"
 
-domain: http://192.168.0.7:10000
+domain: http://localhost:10000
 w3domain: http://localhost:3000
+filedomain: http://localhost:10000
+voddomain: http://localhost:10000
+srvinfo: "dev"
