--- a/pom.xml
+++ b/pom.xml
@@ -220,6 +220,12 @@
             <version>1.4</version>
         </dependency>
 
+    
+      <dependency>
+        <groupId>com.amazonaws</groupId>
+        <artifactId>aws-java-sdk-s3</artifactId>
+        <version>1.11.615</version>
+      </dependency>
     </dependencies>
     <build>
         <directory>${basedir}/target</directory>
