--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,13 +4,15 @@ server:
 #Oracle DataSource
 spring:
   datasource:
+    hikari:
+      max-lifetime: 20
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://eura-maria-db.cmjphsu1czot.ap-northeast-2.rds.amazonaws.com:3306/eura_db
-    username: eura_user
-    password: eura_pass
-    # url: jdbc:mariadb://eura-db.cxmubqzajvkd.ap-northeast-2.rds.amazonaws.com:3306/eura_db
-    # username: euradb
-    # password: db!#221104fk&$%^
+    # url: jdbc:mariadb://eura-maria-db.cmjphsu1czot.ap-northeast-2.rds.amazonaws.com:3306/eura_db
+    # username: eura_user
+    # password: eura_pass
+    url: jdbc:mariadb://eura-db.cxmubqzajvkd.ap-northeast-2.rds.amazonaws.com:3306/eura_db
+    username: euradb
+    password: db!#221104fk&$%^
 
 #업로드 디렉토리는 협의 후 확정
 file:
@@ -43,6 +45,8 @@ mail:
 
 domain: http://localhost:10000
 w3domain: http://localhost:3000
-filedomain: http://localhost:10000
-voddomain: http://localhost:10000
-srvinfo: "dev"
+# filedomain: http://localhost:10000
+# voddomain: http://localhost:10000
+filedomain: https://file.eura.site/upload
+voddomain: https://vod.eura.site
+srvinfo: dev
