--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,17 @@
 spring:
   profiles:
-    active: dev
+    active: prod
   servlet:
     multipart:
       enabled: true
-      max-file-size: 200MB
-      max-request-size: 215MB
+      max-file-size: 5000MB
+      max-request-size: 5500MB
   jwt:
     secret: k9McIikyWC2xy7f0Rg3rIIlMn8hUBJnyLj8c
+
+server:
+  tomcat:
+    max-swallow-size: -1
 
 #Model Location
 mybatis:
@@ -17,3 +21,17 @@ mybatis:
   mapper-locations: classpath:sqlmap/*.xml
   configuration:
     jdbc-type-for-null: null
+
+cloud:
+  aws:
+    credentials:
+      accessKey: AKIAQHUOHBOHNOHIEYEW
+      secretKey: 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
+    s3:
+      bucket: "eura-server"
+    vod:
+      bucket: "eura-media"
+    region:
+      static: ap-northeast-2
+    stack:
+      auto: false
