20221215 동영상,업로드사이즈
- S3 : 동영상 대용량 업로드 가능하게 변경
- S3  : 업로드 파일 형식 지정
- 업로드 용량 제한 5GB
- 미팅 참가자 관련 쿼리에 삭제여부 확인 컬럼 추가
- 영상 업로드 원본 경로 변경
- CloudFront 경로 제거

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     hikari:
-      max-lifetime: 20
+      max-lifetime: 30000
     driver-class-name: org.mariadb.jdbc.Driver
     url: jdbc:mariadb://eura-db.cxmubqzajvkd.ap-northeast-2.rds.amazonaws.com:3306/eura_db
     username: euradb
@@ -37,6 +37,6 @@ mail:
 
 domain: https://api.eura.site
 w3domain: https://eura.site
-filedomain: https://file.eura.site/upload
-voddomain: https://vod.eura.site
+filedomain: https://eura-server.s3.ap-northeast-2.amazonaws.com/upload
+voddomain: https://eura-media.s3.ap-northeast-2.amazonaws.com
 srvinfo: prod
