--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,8 @@ spring:
   servlet:
     multipart:
       enabled: true
-      max-file-size: 5000MB
-      max-request-size: 5500MB
+      max-file-size: 5GB
+      max-request-size: 5GB
   jwt:
     secret: k9McIikyWC2xy7f0Rg3rIIlMn8hUBJnyLj8c
 
