20221220  정렬 순서 변경 요청
"나의 미팅룸 정렬 순서 '미팅 시간 순'을 (공개-비공개-취소순)으로 하고, 그 안에서 미팅시간순으로 정렬
비공개된 미팅이 공개된 미팅보다 미팅시간이 빨라도 뒤로 갈 수 있도록 정렬"

"참석자 목록과 참여자 그래프 정렬 : 나 - 호스트 - 참여자 - 미참여자 순
* 미참여자를 뒤쪽으로"

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -47,6 +47,6 @@ domain: http://localhost:10000
 w3domain: http://localhost:3000
 # filedomain: http://localhost:10000
 # voddomain: http://localhost:10000
-filedomain: https://file.eura.site/upload
-voddomain: https://vod.eura.site
+filedomain: https://eura-server.s3.ap-northeast-2.amazonaws.com/upload
+voddomain: https://eura-media.s3.ap-northeast-2.amazonaws.com
 srvinfo: dev
